Changes made