@@ -1,7 +1,17 @@
+
+To Run Only Voice assistant (without GUI)
+
 Compile:
-javac -cp ".;./lib/sphinx4-core-5prealpha.jar.;./lib/sphinx4-data-1.0.0.jar" App.java
+javac -cp ".;./lib/sphinx4-core-5prealpha.jar.;./lib/sphinx4-data-1.0.0.jar.;./lib/mysql-connector-java-8.0.26.jar" App.java
 
 Execute:
-java -cp ".;./lib/sphinx4-core-5prealpha.jar.;./lib/sphinx4-data-1.0.0.jar" App
+java -cp ".;./lib/sphinx4-core-5prealpha.jar.;./lib/sphinx4-data-1.0.0.jar.;./lib/mysql-connector-java-8.0.26.jar" App
 
+To run Only GUI (without voice assistant)
+
+How to Compile?
+javac --module-path 'C:\javafx-sdk-17.0.1\lib' --add-modules javafx.controls,javafx.fxml,javafx.media .\ColorfulCircles.java
+
+How to Execute?
+java --module-path 'C:\javafx-sdk-17.0.1\lib' --add-modules javafx.controls,javafx.fxml,javafx.media ColorfulCircles
 
